add changes to sandwich.html

--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -26,5 +26,6 @@
         <li>add mayonaise on one side of the bread. Then stack ham, cheese, tomatoes, onions, and lettuce on bread to make a sandwich.</li>
         <li>Enjoy!</li>
     </ol>
+    <a href="../index.html">Back to home</a>
 </body>
 </html>
